# python-lisfy-sql

./: README.md  pyproject.toml
src/lisfy_sql/: __main__.py  main.py  reader.py  rep.py  types.py
src/lisfy_sql/parser/: __init__.py
src/lisfy_sql/parser/create/: __init__.py
