[tool.poetry]
name = "lisfy-sql"
version = "0.1.0"
description = ""
authors = ["Naoya Yamashita <conao3@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
more-itertools = "^9.1.0"
pydantic = "^1.10.9"

[tool.poetry.scripts]
lisfy-sql = "lisfy_sql.__main__:main"

[tool.poetry.group.dev.dependencies]
mypy = "^1.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
